--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "canvasjs fullscreen",
     "chart full screen"
   ],
-  "author": "Vishwas",
+  "author": "Vishwas R",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/vishwas-r/CanvasJS-Chart-FullScreen/issues"
